@@ -1,6 +1,5 @@
 package no.nav.foreldrepenger.los.web.server.jetty;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
@@ -14,23 +13,20 @@ import no.nav.vedtak.util.env.Environment;
 class DataSourceKonfig {
 
     private static final String MIGRATIONS_LOCATION = "classpath:/db/migration/";
-    private DBConnProp defaultDatasource;
-    private List<DBConnProp> dataSources;
+    private final DBConnProp defaultDatasource;
+    private final List<DBConnProp> dataSources;
     private static final Environment ENV = Environment.current();
 
     DataSourceKonfig() {
         defaultDatasource = new DBConnProp(createDatasource("defaultDS"), MIGRATIONS_LOCATION + "defaultDS");
-        dataSources = Arrays.asList(
-            defaultDatasource,
-            new DBConnProp(createDatasource("dvhDS"), MIGRATIONS_LOCATION + "dvhDS"));
+        dataSources = List.of(defaultDatasource);
     }
 
-    private DataSource createDatasource(String dataSourceName) {
+    private static DataSource createDatasource(String dataSourceName) {
         HikariConfig config = new HikariConfig();
         config.setJdbcUrl(ENV.getRequiredProperty(dataSourceName + ".url"));
         config.setUsername(ENV.getRequiredProperty(dataSourceName + ".username"));
-        config.setPassword(ENV.getRequiredProperty(dataSourceName + ".password")); // NOSONAR false positive
-
+        config.setPassword(ENV.getRequiredProperty(dataSourceName + ".password"));
         config.setConnectionTimeout(1000);
         config.setMinimumIdle(5);
         config.setMaximumPoolSize(30);
@@ -52,8 +48,8 @@ class DataSourceKonfig {
     }
 
     static final class DBConnProp {
-        private DataSource datasource;
-        private String migrationScripts;
+        private final DataSource datasource;
+        private final String migrationScripts;
 
         public DBConnProp(DataSource datasource, String migrationScripts) {
             this.datasource = datasource;
